balancer_inc = include_directories('../lib')
#balancer_inc = files(
#	'combined.hpp',
#	'bit-reverse.hpp',
#	'unweighted.hpp',
#	'utils.hpp'
#)
#balancer_lib = static_library(...)
#balancer_dep = declare_dependency(link_with : my_lib
#  include_directories : my_inc)
balancer_dep = declare_dependency(include_directories : balancer_inc)

subdir('unittest')